# Clustering_Stocks_Market

./: .gitignore  ml_stock_prices.ipynb  pyproject.toml
produce/: AAPL_intraday.csv  all_close.csv  all_intraday.csv  ibm_close.csv  main.py  pyproject.toml
